--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-tendo: sudo pip3 install tendo
-AppIndicator3: sudo apt install gir1.2-appindicator3-0.1
-pynput: sudo pip3 install pynput
+requests==2.9.1
+pynput==1.4.2
+tendo==0.2.12
